# spin-torque-rl-gym

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_RESEARCH_SUMMARY.md  README.md  RESEARCH_PUBLICATION.md  RESEARCH_SUMMARY.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETE.md  comprehensive_test_report.json  coverage.json  deploy.sh  docker-compose.prod.yml  docker-compose.yml  production-docker-compose.yml  pyproject.toml  quality_gates_report.json  quality_report_simplified.json  quantum_research_demo.py  quantum_research_demo_simple.py  quantum_validation_benchmark.py  (+21 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  REPOSITORY_SETTINGS.md  project-metrics.json
.terragon/: autonomous-executor.py  value-config.yaml  value-metrics.json
docker/: Dockerfile  dev-entrypoint.sh  docker-compose.prod.yml  entrypoint.sh  init-db.sql
docs/: ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-adr-template.md  0002-physics-engine-choice.md
docs/deployment/: README.md
docs/monitoring/: README.md  health-checks.md
docs/runbooks/: README.md
docs/testing/: README.md
docs/workflows/: README.md
docs/workflows/examples/: cd.yml  ci.yml  dependency-update.yml  security-scan.yml
examples/: quantum_research_showcase.py
scripts/: automation-helpers.py  collect-metrics.py  entrypoint.prod.sh  healthcheck.py
spin_torque_gym/: __init__.py  cli.py  config.py
spin_torque_gym/deployment/: __init__.py  global_deployment.py
spin_torque_gym/devices/: __init__.py  base_device.py  device_factory.py  skyrmion_device.py  sot_mram.py  stt_mram.py  vcma_mram.py
spin_torque_gym/envs/: __init__.py  array_env.py  skyrmion_env.py  spin_torque_env.py
spin_torque_gym/physics/: __init__.py  energy_landscape.py  llgs_solver.py  materials.py  simple_solver.py  thermal_model.py
spin_torque_gym/quantum/: __init__.py  advantage_verification.py  benchmarking.py  circuit_optimization.py  energy_landscape.py  error_correction.py  hybrid_computing.py  optimization.py
spin_torque_gym/research/: __init__.py  comparative_algorithms.py  novel_algorithms.py  publication_framework.py  quantum_machine_learning.py  quantum_spintronics.py  validation_framework.py
spin_torque_gym/rewards/: __init__.py  base_reward.py  composite_reward.py
spin_torque_gym/utils/: __init__.py  advanced_monitoring.py  cache.py  concurrency.py  error_handling.py  health.py  logging_config.py  monitoring.py  performance.py  performance_optimization.py  robust_environment.py  robust_solver.py  scalable_environment.py  scalable_solver.py  scaling.py  security.py  security_validation.py  validation.py  vectorized_operations.py
spin_torque_gym/visualization/: __init__.py  research_plots.py
tests/: __init__.py  conftest.py  test_comprehensive_suite.py
tests/benchmarks/: __init__.py  test_performance.py
tests/e2e/: __init__.py  test_training_workflow.py
tests/fixtures/: __init__.py  device_configs.py  sample_data.py
tests/integration/: __init__.py  test_environment.py
tests/unit/: __init__.py  test_core.py  test_devices.py  test_physics.py
