[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spin-torque-rl-gym"
version = "0.1.0"
description = "Gymnasium environment for spin-torque device control via RL"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["reinforcement-learning", "spintronics", "gymnasium", "neuromorphic"]
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pre-commit>=3.0.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
viz = [
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "opencv-python>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/terragon-labs/spin-torque-rl-gym"
Documentation = "https://spin-torque-rl-gym.readthedocs.io"
Repository = "https://github.com/terragon-labs/spin-torque-rl-gym"
Issues = "https://github.com/terragon-labs/spin-torque-rl-gym/issues"

[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = ["E", "W", "F", "I", "N", "S", "B", "C4", "PLE", "PLW"]
ignore = ["S101", "S301", "B905"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=spin_torque_gym --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["spin_torque_gym"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]